# tts-ds-fundamentals-course

./: README.md  index.ipynb
.ipynb_checkpoints/: index-checkpoint.ipynb
datascience/: README.md  index.ipynb
datascience/.ipynb_checkpoints/: index-checkpoint 2.ipynb  index-checkpoint.ipynb
datascience/frameworks/: README.md  index.ipynb
datascience/frameworks/19_mod_django/: 01.ipynb
datascience/frameworks/20_mod_flask/: app.py  application.py  hello.py  index.ipynb
datascience/julia/: README.md  index.ipynb
datascience/julia/.ipynb_checkpoints/: index-checkpoint.ipynb
datascience/julia/17_mod_julia/: 00_julia_overview.ipynb  01_julia_started.ipynb  03_julia_gadfly.ipynb
datascience/julia/18_mod_df/: 01_constructors.ipynb  02_basicinfo.ipynb  03_missingvalues.ipynb  04_loadsave.ipynb  05_columns.ipynb  06_rows.ipynb  08_joins.ipynb  09_reshaping.ipynb  10_transforms.ipynb  11_performance.ipynb  12_pitfalls.ipynb  Manifest.toml  Project.toml
datascience/python/: README.md  index.ipynb
datascience/python/.ipynb_checkpoints/: 01_mod_intro-checkpoint.ipynb  index-checkpoint.ipynb
datascience/python/00_mod_setup/: 01_mod_intro_python.ipynb  02_how_to_run_python_code.ipynb
datascience/python/01_mod_intro/: 01_mod_python_syntax.ipynb  02_python_variables_objects.ipynb  03_python_operators.ipynb
datascience/python/02_mod_data/: 01_simple_types.ipynb  02_data_structures.ipynb  02_data_structures_dictionaries.ipynb  02_data_structures_lists.ipynb  (+3 more)
datascience/python/09_mod_numpy/flake8-markdown/: pyproject.toml
datascience/r/: README.md
(+442 files in other folders)
