[tool.poetry]
name = "flake8-markdown"
version = "0.0.1"
description = "Links Python Code Blocks in Markdown Using Flake8"
authors = ["GS Jackson <gary.jackson@qlx.com>"]
# New Attributes
homepage = "https://github.com/enterlifeonline"
repository = "https://github.com/enterlifeonline"
[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
numpy = "^1.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
